syntax = "proto3";
package steward.v1;

option go_package = "/steward_proto";

import "aave_v2_stablecoin.proto";

service ContractCall {
    rpc Submit(SubmitRequest) returns (SubmitResponse) {}
}

message SubmitRequest {
    string cellar_id = 1;
    oneof call_data {
        AaveV2Stablecoin aave_v2_stablecoin = 2;
    }
}

message SubmitResponse {}
